recursion.cons.last.Last.scala.error
Compilation error:
Last:3: error: '(' expected but identifier found.
  if l.tail == Nil l.head
     ^Last:5: error: illegal start of simple expression
} 
^